unpackaged/objects/DFSS_SnapShot_Push__c.object
<CustomObject>
	<fields>
		<fullName>Expansion__c</fullName>
		<label>Expansion</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>Extra_Field2__c</fullName>
		<label>Extra Field2</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Extra_Field3__c</fullName>
		<label>Extra Field3</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Extra_Field__c</fullName>
		<label>Extra Field</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Job_ID__c</fullName>
		<label>Job ID</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Result__c</fullName>
		<label>Result</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>SnapShot__c</fullName>
		<label>SnapShot</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Source__c</fullName>
		<label>Source</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Success__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Success</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Type__c</fullName>
		<label>Type</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Check For Errors Without Making Changes</fullName>
				</value>
				<value>
					<fullName>Roll Back All Changes If There Is An Error</fullName>
				</value>
				<value>
					<fullName>Change Everything Possible And Ignore Errors</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>Version__c</fullName>
		<label>Version</label>
		<precision>4</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<label>SnapShot Push</label>
	<listViews>
		<fullName>All_Pushes</fullName>
		<columns>NAME</columns>
		<columns>Type__c</columns>
		<columns>SnapShot__c</columns>
		<columns>Source__c</columns>
		<columns>Success__c</columns>
		<columns>UPDATEDBY_USER</columns>
		<columns>LAST_UPDATE</columns>
		<filterScope>Everything</filterScope>
		<label>All Pushes</label>
	</listViews>
	<listViews>
		<fullName>All_Successful_Pushes</fullName>
		<columns>NAME</columns>
		<columns>Type__c</columns>
		<columns>SnapShot__c</columns>
		<columns>Source__c</columns>
		<columns>Success__c</columns>
		<columns>UPDATEDBY_USER</columns>
		<columns>LAST_UPDATE</columns>
		<filterScope>Everything</filterScope>
		<filters>
			<field>Success__c</field>
			<operation>equals</operation>
			<value>1</value>
		</filters>
		<label>All Successful Pushes</label>
	</listViews>
	<listViews>
		<fullName>All_Unsuccessful_Pushes</fullName>
		<columns>NAME</columns>
		<columns>Type__c</columns>
		<columns>SnapShot__c</columns>
		<columns>Source__c</columns>
		<columns>Success__c</columns>
		<columns>UPDATEDBY_USER</columns>
		<columns>LAST_UPDATE</columns>
		<filterScope>Everything</filterScope>
		<filters>
			<field>Success__c</field>
			<operation>equals</operation>
			<value>0</value>
		</filters>
		<label>All Unsuccessful Pushes</label>
	</listViews>
	<listViews>
		<fullName>LastWeek_s_Changes</fullName>
		<columns>NAME</columns>
		<columns>Type__c</columns>
		<columns>SnapShot__c</columns>
		<columns>Source__c</columns>
		<columns>Success__c</columns>
		<columns>UPDATEDBY_USER</columns>
		<columns>LAST_UPDATE</columns>
		<filterScope>Everything</filterScope>
		<filters>
			<field>CREATED_DATE</field>
			<operation>equals</operation>
			<value>LAST_WEEK</value>
		</filters>
		<label>Last Week&apos;s Changes</label>
	</listViews>
	<listViews>
		<fullName>ThisWeek_s_Changes</fullName>
		<columns>NAME</columns>
		<columns>Type__c</columns>
		<columns>SnapShot__c</columns>
		<columns>Source__c</columns>
		<columns>Success__c</columns>
		<columns>UPDATEDBY_USER</columns>
		<columns>LAST_UPDATE</columns>
		<filterScope>Everything</filterScope>
		<filters>
			<field>CREATED_DATE</field>
			<operation>equals</operation>
			<value>THIS_WEEK</value>
		</filters>
		<label>This Week&apos;s Changes</label>
	</listViews>
	<listViews>
		<fullName>Today_s_Changes</fullName>
		<columns>NAME</columns>
		<columns>Type__c</columns>
		<columns>SnapShot__c</columns>
		<columns>Source__c</columns>
		<columns>Success__c</columns>
		<columns>UPDATEDBY_USER</columns>
		<columns>LAST_UPDATE</columns>
		<filterScope>Everything</filterScope>
		<filters>
			<field>CREATED_DATE</field>
			<operation>equals</operation>
			<value>TODAY</value>
		</filters>
		<label>Today&apos;s Changes</label>
	</listViews>
	<listViews>
		<fullName>Today_s_Successful_Changes</fullName>
		<columns>NAME</columns>
		<columns>Type__c</columns>
		<columns>SnapShot__c</columns>
		<columns>Source__c</columns>
		<columns>Success__c</columns>
		<columns>UPDATEDBY_USER</columns>
		<columns>LAST_UPDATE</columns>
		<filterScope>Everything</filterScope>
		<filters>
			<field>CREATED_DATE</field>
			<operation>equals</operation>
			<value>TODAY</value>
		</filters>
		<filters>
			<field>Success__c</field>
			<operation>equals</operation>
			<value>1</value>
		</filters>
		<label>Today&apos;s Successful Changes</label>
	</listViews>
	<listViews>
		<fullName>Today_s_Unsuccessful_Changes</fullName>
		<columns>NAME</columns>
		<columns>Type__c</columns>
		<columns>SnapShot__c</columns>
		<columns>Source__c</columns>
		<columns>Success__c</columns>
		<columns>UPDATEDBY_USER</columns>
		<columns>LAST_UPDATE</columns>
		<filterScope>Everything</filterScope>
		<filters>
			<field>CREATED_DATE</field>
			<operation>equals</operation>
			<value>TODAY</value>
		</filters>
		<filters>
			<field>Success__c</field>
			<operation>equals</operation>
			<value>0</value>
		</filters>
		<label>Today&apos;s Unsuccessful Changes</label>
	</listViews>
	<nameField>
		<label>Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>SnapShot Pushes</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>